# SLAM

./: CMakeLists.txt  run_simpleicp.sh
src/: simpleicp-cli.cpp  simpleicp.cpp
testing/: CMakeLists.txt  points.xyz  points_transformed.xyz  runtest.sh  testing_utils.cpp
